tests/negative/neg_string_attribute.safe
-- Test: neg_string_attribute
-- Description: String attributes remain outside the PR11.2 text subset.
-- Expected: REJECT unsupported_source_construct

package Neg_String_Attribute

   function Measure (Name : in String) returns Integer

      return Name.Length;



